tests/baselines/reference/iterableArrayPattern8(strict=true).errors.txt
iterableArrayPattern8.ts(1,13): error TS7008: Member 'x' implicitly has an 'any' type.
iterableArrayPattern8.ts(2,25): error TS7008: Member 'y' implicitly has an 'any' type.
iterableArrayPattern8.ts(17,8): error TS2322: Type 'Foo[]' is not assignable to type 'string'.


==== iterableArrayPattern8.ts (3 errors) ====
    class Bar { x }
                ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    class Foo extends Bar { y }
                            ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var a: Bar, b: string;
    [a, ...b] = new FooIterator;
           ~
!!! error TS2322: Type 'Foo[]' is not assignable to type 'string'.